# rivusio

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: branch-check.yml  ci.yml  publish.yml  test.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: aio.md  config.md  core.md  monitoring.md  plugins.md  streams.md  sync.md
docs/development/: overview.md  testing.md
docs/examples/: advanced-patterns.md  basic-pipeline.md  basic-transformation.md  basic_pipeline.md  batch-processing.md  configuration.md  external-services.md  lambda-composition.md  pipeline-composition.md  stream-processing.md  sync-pipeline.md
docs/getting-started/: architecture-diagrams.md  architecture-overview.md  concepts.md  installation.md  quickstart.md
docs/maintainer/: code-review.md  documentation.md  overview.md  release-process.md
docs/site/: 404.html  index.html  objects.inv
docs/site/api/core/: index.html
docs/site/api/monitoring/: index.html
docs/site/api/plugins/: index.html
docs/site/api/streams/: index.html
docs/site/changelog/: index.html
docs/site/contributing/: index.html
docs/site/development/overview/: index.html
docs/site/development/testing/: index.html
docs/site/examples/advanced-patterns/: index.html
docs/site/examples/basic-transformation/: index.html
docs/site/examples/basic_pipeline/: index.html
docs/site/examples/lambda-composition/: index.html
docs/site/examples/pipeline-composition/: index.html
docs/site/examples/sync_pipeline/: index.html
docs/site/getting-started/architecture-overview/: index.html
docs/site/getting-started/concepts/: index.html
docs/site/getting-started/installation/: index.html
docs/site/search/: search_index.json
docs/site/user-guide/benchmarking/: index.html
docs/site/user-guide/configuration/: index.html
docs/site/user-guide/pipelines/: index.html
docs/site/user-guide/pipes/: index.html
docs/site/user-guide/plugins/: index.html
docs/site/user-guide/stream-processing/: index.html
docs/site/user-guide/streams/: index.html
docs/user-guide/: benchmarking.md  configuration.md  error-handling.md  monitoring.md  performance-tuning.md  pipelines.md  pipes.md  plugins.md  stream-processing.md  streams.md  troubleshooting.md
examples/: __init__.py  async_pipeline_demo.py  basic_transformation.py  config_example.py  lambda_composition.py  pipeline_composition.py  shift_oper.py  using_streams.py
site/: 404.html  index.html  objects.inv
site/api/aio/: index.html
site/api/config/: index.html
site/api/core/: index.html
site/api/monitoring/: index.html
site/api/plugins/: index.html
site/api/sync/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/development/overview/: index.html
site/development/testing/: index.html
site/examples/advanced-patterns/: index.html
site/examples/basic-pipeline/: index.html
site/examples/basic-transformation/: index.html
site/examples/batch-processing/: index.html
site/examples/configuration/: index.html
site/examples/external-services/: index.html
site/examples/lambda-composition/: index.html
site/examples/pipeline-composition/: index.html
site/examples/stream-processing/: index.html
site/examples/sync-pipeline/: index.html
site/getting-started/architecture-diagrams/: index.html
site/getting-started/architecture-overview/: index.html
site/getting-started/concepts/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/maintainer/code-review/: index.html
site/maintainer/documentation/: index.html
site/maintainer/overview/: index.html
site/maintainer/release-process/: index.html
site/search/: search_index.json
site/site/getting-started/architecture-diagrams/: index.html
site/site/getting-started/quickstart/: index.html
site/site/user-guide/error-handling/: index.html
site/site/user-guide/monitoring/: index.html
site/site/user-guide/performance-tuning/: index.html
site/site/user-guide/troubleshooting/: index.html
site/user-guide/benchmarking/: index.html
site/user-guide/configuration/: index.html
site/user-guide/error-handling/: index.html
site/user-guide/monitoring/: index.html
site/user-guide/performance-tuning/: index.html
site/user-guide/pipelines/: index.html
site/user-guide/pipes/: index.html
site/user-guide/plugins/: index.html
site/user-guide/stream-processing/: index.html
site/user-guide/streams/: index.html
site/user-guide/troubleshooting/: index.html
src/rivusio/: __init__.py
src/rivusio/aio/: __init__.py  parallel.py  pipeline.py  stream.py
src/rivusio/cli/: __init__.py  main.py
src/rivusio/config/: __init__.py  executor.py  pipe.py  stream.py
src/rivusio/core/: __init__.py  base.py  config.py  exceptions.py  execution_strategy.py  interfaces.py  message.py  metrics.py  parallel.py  pipe.py  pipeline.py  types.py
src/rivusio/monitoring/: __init__.py  metrics.py  pipeline_monitor.py
src/rivusio/plugins/: __init__.py  plugins.py
src/rivusio/streams/: __init__.py  stream.py
src/rivusio/sync/: __init__.py  parallel.py  pipeline.py  stream.py
src/rivusio/testing/: __init__.py  fixtures.py
tests/: conftest.py  test_pipeline.py  test_pipeline_monitor.py  test_plugins.py  test_stream.py
tests/aio/: __init__.py  test_pipeline.py  test_stream.py
tests/config/: test_executor_config.py  test_pipe_config.py  test_stream_config.py
tests/core/: __init__.py  test_message.py
tests/monitoring/: __init__.py  test_metrics.py  test_pipeline_monitor.py
tests/plugins/: __init__.py  test_plugins.py
tests/sync/: __init__.py  test_parallel.py  test_pipeline.py  test_stream.py
